--- a/app/src/main/res/layout/keyboard_main.xml
+++ b/app/src/main/res/layout/keyboard_main.xml
@@ -6,10 +6,47 @@
     android:background="@color/colorKeyboard"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/vkdialogs" />
+
     <FrameLayout
         android:id="@+id/keyboardroot"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="310dp">
+
+        <FrameLayout
+            android:id="@+id/mainview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+
+
+            </LinearLayout>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/chats"
+                android:visibility="visible"
+                android:layout_width="wrap_content"
+                android:layout_height="310dp"
+                android:padding="5dp"/>
+
+            <ProgressBar
+                android:id="@+id/progress"
+                android:visibility="gone"
+                style="?android:attr/progressBarStyle"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/loginbutton"
