--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="@style/ThemeOverlay.AppCompat.Light" />
 
-    <style name="BottomNavigationTheme" parent="Theme.AppCompat.Light">
+    <style name="BottomNavigationTheme" parent="Theme.MaterialComponents.Light">
+        <item name="colorPrimary">@color/colorAccent</item>
+    </style>
+
+    <style name="ButtonStyle" parent="Theme.MaterialComponents.Light">
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="colorPrimary">@color/colorAccent</item>
     </style>
 
