--- a/app/src/main/res/layout/pack_fragment.xml
+++ b/app/src/main/res/layout/pack_fragment.xml
@@ -4,6 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent" android:layout_height="match_parent"
+        android:background="@color/colorKeyboard"
         tools:context=".ui.fragments.PackFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -34,33 +35,37 @@
                 android:orientation="vertical"
                 android:layout_gravity="center">
             <TextView
+                    android:visibility="gone"
                     android:id="@+id/error_msg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/loadingerror"/>
             <ProgressBar
+                    android:visibility="gone"
                     android:id="@+id/progress_bar"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"/>
-            <Button
+            <com.google.android.material.button.MaterialButton
+                    android:visibility="gone"
                     android:id="@+id/reload_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textColor="@color/colorAccent"
+                    app:cornerRadius="4dp"
+                    app:strokeWidth="1dp"
+                    app:backgroundTint="@color/colorAccent"
                     android:text="@string/reload"
-                    android:background="?android:attr/selectableItemBackground"/>
+            />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/stickers_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
+                android:scrollbars="vertical"/>
 
     </FrameLayout>
 
