--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -6,11 +6,15 @@
 
     <fragment android:id="@+id/navigation_allstickers"
               android:name="org.visapps.vkstickerskeyboard.ui.fragments.AllStickersFragment"
-              android:label="@string/allstickers" tools:layout="@layout/all_stickers_fragment"/>
+              android:label="@string/allstickers" tools:layout="@layout/all_stickers_fragment">
+        <action android:id="@+id/action_allstickers_to_pack" app:destination="@id/navigation_pack"/>
+    </fragment>
     <fragment android:id="@+id/navigation_savedstickers"
               android:name="org.visapps.vkstickerskeyboard.ui.fragments.SavedStickersFragment"
               android:label="@string/savedstickers" tools:layout="@layout/saved_stickers_fragment"/>
     <fragment android:id="@+id/navigation_account"
               android:name="org.visapps.vkstickerskeyboard.ui.fragments.AccountFragment"
               android:label="@string/account" tools:layout="@layout/account_fragment"/>
+    <fragment android:id="@+id/navigation_pack" android:name="org.visapps.vkstickerskeyboard.ui.fragments.PackFragment"
+              android:label="@string/stickerpack" tools:layout="@layout/pack_fragment"/>
 </navigation>
