--- a/app/src/main/res/layout/pack_fragment.xml
+++ b/app/src/main/res/layout/pack_fragment.xml
@@ -4,7 +4,6 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        android:background="@color/colorKeyboard"
         tools:context=".ui.fragments.PackFragment">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -51,17 +50,16 @@
             <com.google.android.material.button.MaterialButton
                     android:visibility="gone"
                     android:id="@+id/reload_button"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    app:cornerRadius="4dp"
-                    app:strokeWidth="1dp"
-                    app:backgroundTint="@color/colorAccent"
-                    android:text="@string/reload"
-            />
+                    android:textColor="?attr/colorAccent"
+                    android:text="@string/reload"/>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
                 android:id="@+id/stickers_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
