--- a/app/src/main/res/layout/saved_stickers_fragment.xml
+++ b/app/src/main/res/layout/saved_stickers_fragment.xml
@@ -23,4 +23,26 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
+    <FrameLayout
+            android:layout_marginTop="56dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
+                android:id="@+id/packs_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="vertical"/>
+
+        <TextView
+                android:visibility="gone"
+                android:id="@+id/empty_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/nosavedpacksfound"/>
+
+    </FrameLayout>
+
 </FrameLayout>
