--- a/app/src/main/res/layout/saved_stickers_fragment.xml
+++ b/app/src/main/res/layout/saved_stickers_fragment.xml
@@ -33,7 +33,8 @@
                 android:id="@+id/packs_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical"/>
+                android:scrollbars="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
         <TextView
                 android:visibility="gone"
