--- a/app/src/main/res/layout/keyboard_main.xml
+++ b/app/src/main/res/layout/keyboard_main.xml
@@ -5,10 +5,11 @@
     android:layout_height="wrap_content"
     android:background="@color/colorKeyboard">
 
-    <include android:visibility="visible"
+    <include android:id="@+id/dialogs"
              layout="@layout/keyboard_dialogs" />
 
-    <include android:layout_width="match_parent"
+    <include android:id="@+id/login"
+             android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="visible"
              android:layout_gravity="center"
