--- a/app/src/main/res/layout/keyboard_dialogs.xml
+++ b/app/src/main/res/layout/keyboard_dialogs.xml
@@ -3,49 +3,36 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+              android:layout_height="250dp">
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="32dp"
+            android:layout_margin="1dp">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:layout_gravity="start|center_vertical"
                 android:text="@string/vkdialogs"
                 android:textSize="16sp"/>
 
         <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/update_layout"
+                android:visibility="gone"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_gravity="end">
-
-            <ProgressBar
-                    style="?android:attr/progressBarStyle"
-                    android:layout_gravity="center"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:visibility="invisible"
-                    android:id="@+id/loading_indicator"/>
 
             <ImageButton
                     android:id="@+id/update_button"
                     android:tint="@color/colorAccent"
                     android:background="?android:selectableItemBackground"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
                     app:srcCompat="@drawable/ic_refresh_black_24dp"
-                    android:layout_gravity="center"/>
-
-            <ImageButton
-                    android:id="@+id/redo_button"
-                    android:tint="@color/colorAccent"
-                    android:background="?android:selectableItemBackground"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    app:srcCompat="@drawable/ic_redo_black_24dp"
                     android:layout_gravity="center"/>
 
         </FrameLayout>
@@ -55,22 +42,20 @@
     <FrameLayout
             android:id="@+id/mainview"
             android:layout_width="match_parent"
-            android:layout_height="310dp">
+            android:layout_height="192dp">
 
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_dialogs"
                 android:visibility="visible"
                 android:layout_width="wrap_content"
-                android:layout_height="310dp"
-                android:padding="5dp"/>
+                android:layout_height="match_parent"/>
 
         <ProgressBar
                 android:id="@+id/progress"
                 style="?android:attr/progressBarStyle"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:visibility="gone"
                 android:layout_height="wrap_content" />
         <TextView
                 android:text="@string/failed_to_load_dialogs"
@@ -83,15 +68,16 @@
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_height="24dp"
+            android:layout_margin="1dp">
 
         <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/app_name" />
+                android:text="@string/app_name"
+                android:textSize="12sp"/>
 
     </FrameLayout>
 
