--- a/app/src/main/res/layout/keyboard_login.xml
+++ b/app/src/main/res/layout/keyboard_login.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto">
+             android:layout_width="match_parent"
+             android:layout_height="250dp" xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.button.MaterialButton
             android:id="@+id/loginbutton"
@@ -12,7 +12,7 @@
             android:visibility="visible"
             app:backgroundTint="@color/colorAccent"
             app:cornerRadius="4dp"
-            app:strokeWidth="1dp" />
+            app:strokeWidth="1dp"/>
 
 
 
