--- a/app/src/main/res/layout/keyboard_dialogs.xml
+++ b/app/src/main/res/layout/keyboard_dialogs.xml
@@ -19,23 +19,15 @@
                 android:text="@string/vkdialogs"
                 android:textSize="16sp"/>
 
-        <FrameLayout
-                android:id="@+id/update_layout"
-                android:visibility="gone"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="end">
-
-            <ImageButton
-                    android:id="@+id/update_button"
-                    android:tint="@color/colorAccent"
-                    android:background="?android:selectableItemBackground"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    app:srcCompat="@drawable/ic_refresh_black_24dp"
-                    android:layout_gravity="center"/>
-
-        </FrameLayout>
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/reload_button"
+                style="@style/Widget.MaterialComponents.Button.Icon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_margin="4dp"
+                android:layout_gravity="end"
+                android:text="@string/reload"
+                app:icon="@drawable/ic_refresh_black_24dp"/>
 
     </FrameLayout>
 
