--- a/app/src/main/res/layout/dialog_network_state.xml
+++ b/app/src/main/res/layout/dialog_network_state.xml
@@ -10,27 +10,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"/>
 
-    <LinearLayout
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-        <TextView
-                android:id="@+id/error_msg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/error"/>
-
-        <com.google.android.material.button.MaterialButton
-                android:id="@+id/reload_button"
-                style="@style/Widget.MaterialComponents.Button.Icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/reload"
-                app:icon="@drawable/ic_refresh_black_24dp"/>
-    </LinearLayout>
+    <ImageButton
+            android:id="@+id/reload_button"
+            android:tint="@color/colorAccent"
+            android:background="?android:selectableItemBackground"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_refresh_black_24dp"
+            android:layout_gravity="center"/>
 
 </FrameLayout>
