--- a/app/src/main/res/layout/keyboard_dialogs.xml
+++ b/app/src/main/res/layout/keyboard_dialogs.xml
@@ -19,15 +19,26 @@
                 android:text="@string/vkdialogs"
                 android:textSize="16sp"/>
 
-        <com.google.android.material.button.MaterialButton
-                android:id="@+id/reload_button"
-                style="@style/Widget.MaterialComponents.Button.Icon"
+        <ProgressBar
+                android:id="@+id/refresh_progress"
+                style="?android:attr/progressBarStyle"
+                android:layout_margin="4dp"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_margin="4dp"
-                android:layout_gravity="end"
-                android:text="@string/reload"
-                app:icon="@drawable/ic_refresh_black_24dp"/>
+                android:layout_gravity="end"/>
+
+        <ImageButton
+                android:id="@+id/refresh_button"
+                android:tint="@color/colorAccent"
+                android:background="?android:selectableItemBackground"
+                android:layout_margin="2dp"
+                android:minWidth="28dp"
+                android:minHeight="28dp"
+                android:scaleType="fitXY"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_refresh_black_24dp"
+                android:layout_gravity="end"/>
 
     </FrameLayout>
 
